# squid-replication

./: .gitignore  AGENTS.md  README.md  pyproject.toml  ux.parquet  workbench.py
notebooks/: signal_test.ipynb
scripts/: evaluate_paper_fit.py
src/squid_replication/: __init__.py  __main__.py  cboe_vx.py  signals.py
tests/: test_cboe_vx.py  test_signals.py
