[project]
name = "squid-replication"
version = "0.1.0"
description = "Download and normalize monthly VX futures history from Cboe"
readme = "README.md"
authors = [
    { name = "VZ", email = "vorcazap@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
]

[project.scripts]
squid-replication = "squid_replication:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
